# goit-pythonweb-hw-10

./: .env.example  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1cb2e35c53a8_initial_state.py  1e178100901b_extend_contact_table.py  3a2ef571ede1_add_email_verification.py  e67bfab3217f_change_dob_db_type.py
src/auth/: contact_schema.py  contacts_repository.py  hash.py  users_service.py
src/cloudinary/: upload_file_service.py
src/config/: config.py
src/database/: __init__.py  db.py
src/database/models/: contacts_model.py
src/email/: email_service.py
src/email/templates/: verify_email.html
src/features/auth/: auth_controller.py  auth_service.py  login_controller.py  login_service.py
src/features/auth/schema/: auth_response_schema.py  login_response_schema.py  login_schema.py
src/features/contacts/: contacts_controller.py  contacts_repository.py  contacts_service.py
src/features/contacts/schema/: contact_create_schema.py  contact_response_schema.py  contact_schema.py  contact_update_schema.py
